// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`local integration test common config init getFeatureValue, changeFeatureValue with scopes 1`] = `
[
  {
    "errorMessage": "value "{0}" does not match validation regular expression {1}",
    "errorMessageValues": [
      10,
      "/^\\d{1}$/",
    ],
    "featureKey": "test/feature_e",
    "scopeKey": "component::c1##tenant::t1",
  },
]
`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue with scopes 8`] = `
[
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue with scopes and clearSubScopes, resetFeatureValue 5`] = `
[
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue without scopes 1`] = `
[
  {
    "errorMessage": "value "{0}" does not match validation regular expression {1}",
    "errorMessageValues": [
      10,
      "/^\\d{1}$/",
    ],
    "featureKey": "test/feature_e",
    "scopeKey": "//",
  },
]
`;

exports[`local integration test common config init getFeatureValue, changeFeatureValue without scopes 4`] = `
[
  [
    "%s | %O",
    "caught error event: connect ECONNREFUSED 127.0.0.1:6379",
    {
      "clientName": "main",
    },
  ],
]
`;

exports[`local integration test common config init getFeatureValues, getFeaturesInfos 1`] = `
{
  "test/feature_a": {
    "config": {
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "test/feature_b": {
    "config": {
      "TYPE": "number",
    },
    "fallbackValue": 1,
  },
  "test/feature_c": {
    "config": {
      "TYPE": "string",
    },
    "fallbackValue": "best",
  },
  "test/feature_d": {
    "config": {
      "TYPE": "boolean",
      "VALIDATIONS": [
        {
          "regex": "^(?:true)$",
        },
      ],
    },
    "fallbackValue": true,
  },
  "test/feature_e": {
    "config": {
      "TYPE": "number",
      "VALIDATIONS": [
        {
          "scopes": [
            "component",
            "layer",
            "tenant",
          ],
        },
        {
          "regex": "^\\d{1}$",
        },
      ],
    },
    "fallbackValue": 5,
  },
  "test/feature_f": {
    "config": {
      "TYPE": "string",
      "VALIDATIONS": [
        {
          "regex": "^(?:best|worst)$",
        },
      ],
    },
    "fallbackValue": "best",
  },
  "test/feature_g": {
    "config": {
      "ACTIVE": false,
      "TYPE": "string",
    },
    "fallbackValue": "activeTest",
  },
  "test/feature_h": {
    "config": {
      "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "APP_URL_ACTIVE": true,
      "TYPE": "string",
    },
    "fallbackValue": "appUrlTest",
  },
}
`;
